--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>My First Website</h1>
+    <ul>
+        <li>About</li>
+        <li>Products</li>
+        <li>Services</li>
+        <li>Contact</li>
+    </ul>
 </body>
 </html>
